# specs/src/main/resources/api-spec.yaml
@@ -223,15 +223,15 @@ paths:
                 items:
                   $ref: '#/components/schemas/Rule'
   /rules/{id}:
+    parameters:
+      - in: path
+        name: id
+        schema:
+          type: integer
+        required: true
     put:
       description: update a rule
       operationId: updateRule
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: integer
-          required: true
       requestBody:
         content:
           'application/json':
@@ -243,12 +243,83 @@ paths:
     delete:
       description: Delete a rule
       operationId: deleteRule
+      responses:
+        '204':
+          description: deleted
+
+  /pointScales/:
+    get:
+      description: get the list of all point scales
+      operationId: getAllPointScales
       parameters:
-        - in: path
-          name: id
+        - in: query
+          name: applicationId
           schema:
             type: integer
-          required: true
+            format: int64
+            description: The id of the application from which to retrieve point scales
+      responses:
+        '200':
+          description: success
+          content:
+            'application/json':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/PointScaleDTO'
+    post:
+      description: create a point scale
+      operationId: createPointScale
+      requestBody:
+        content:
+          'application/json':
+            schema:
+              $ref: '#/components/schemas/PointScaleCreateCommand'
+      responses:
+        '201':
+          description: created
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/PointScaleDTO'
+
+  /pointScales/{id}:
+    parameters:
+      - in: path
+        name: id
+        schema:
+          type: integer
+          format: int64
+        required: true
+    get:
+      description: get one point scale by id
+      operationId: getPointScale
+      responses:
+        '200':
+          description: success
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/PointScaleDTO'
+    put:
+      description: update a point scale
+      operationId: updatePointScale
+      requestBody:
+        content:
+          'application/json':
+            schema:
+              $ref: '#/components/schemas/PointScaleCreateCommand'
+      responses:
+        '201':
+          description: updated
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/PointScaleDTO'
+
+    delete:
+      description: delete a point scale
+      operationId: deletePointScale
       responses:
         '204':
           description: deleted
@@ -318,6 +389,29 @@ components:
           type: string #JSON content
         then:
           type: string #JSON content
+    PointScaleDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        description:
+          type: string
+        applicationId:
+          type: integer
+          format: int64
+    PointScaleCreateCommand:
+      type: object
+      properties:
+        name:
+          type: string
+        description:
+          type: string
+        applicationId:
+          type: integer
+          format: int64
     Event:
       type: object
       properties:
